force-app/main/default/objects/Sales_Product__c/Sales_Product__c.object-meta.xml
<CustomObject>
    <label>Sales Product</label>
    <nameField>
        <displayFormat>SPN - {00000}</displayFormat>
        <label>Sales Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>