force-app/main/default/objects/Sales_Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>Sales_Products</relationshipName>
    <type>Lookup</type>
</CustomField>