force-app/main/default/objects/Sales_Product__c/fields/Sales_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Category__c</fullName>
    <label>Sales Product Category</label>
    <referenceTo>Sales_Product_Category__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>Sales_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>