force-app/main/default/objects/Sales_Product__c/fields/Sales_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Strategy</label>
    <referenceTo>Sales_Strategy__c</referenceTo>
    <relationshipLabel>Sales Products</relationshipLabel>
    <relationshipName>Sales_Products</relationshipName>
    <type>Lookup</type>
</CustomField>